<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>consulo.hub</groupId>
	<artifactId>webservice-api-root</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>hub(Parent)</name>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>consulo</groupId>
				<artifactId>arch.managment</artifactId>
				<version>${consulo.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<properties>
		<consulo.version>3-SNAPSHOT</consulo.version>
		<spring.boot.version>3.0.6</spring.boot.version>
		<vaadin.version>24.0.5</vaadin.version>
		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
	</properties>

	<repositories>
		<repository>
			<id>consulo</id>
			<url>https://maven.consulo.io/repository/snapshots/</url>
			<snapshots>
				<updatePolicy>interval:60</updatePolicy>
			</snapshots>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>consulo-plugin</id>
			<url>https://maven.consulo.io/repository/snapshots/</url>
			<snapshots>
				<updatePolicy>interval:60</updatePolicy>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>procoeton-ui-core</module>
		<module>hub-shared</module>
		<module>hub-backend</module>
		<module>hub-frontend</module>
		<module>hub-plugin-analyzer-rt</module>
		<module>hub-plugin-analyzer-container-rt</module>
	</modules>
</project>
